--- a/inventory-example.yaml
+++ b/inventory-example.yaml
@@ -3,5 +3,5 @@ rapid:
     test:
       ansible_host: repos.test-domain.dev
       ansible_become: yes
-      repos_server_name: repos.test-domain.dev
+      repos_domain_name: repos.test-domain.dev
       letsencrypt_email: owner@test-domain.dev
