Revamp whole playbook
- Upgrade to debian 13
- Switch nginx to caddy
- Drop support for steamer nobody uses
- Remove all ansible_pull setup

--- a/http_server/handlers/main.yaml
+++ b/http_server/handlers/main.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Reload nginx
+- name: Reload caddy
   ansible.builtin.systemd:
-    name: nginx.service
+    name: caddy.service
     state: reloaded
