--- a/rapid_repos/tasks/main.yaml
+++ b/rapid_repos/tasks/main.yaml
@@ -1,17 +1,7 @@
 ---
-- name: Fetch GitHub RapidTools releases
-  ansible.builtin.uri:
-    url: 'https://api.github.com/repos/{{ rapidtools_github }}/releases'
-  register: rt_releases
-- name: Install rapidtools
+- name: Install RapidTools
   ansible.builtin.apt:
-    deb: '{{ rt_releases.json | community.general.json_query(deb_query) }}'
-  vars:
-    deb_query: |
-      [?!prerelease].assets[]
-      | [?ends_with(name, `.deb`) &&
-         !contains(name, `dbgsym`)]
-      | [0].browser_download_url
+    deb: '{{ rapidtools_deb }}'
 - name: Install dependencies
   ansible.builtin.package:
     state: present
