--- a/rapid_repos/defaults/main.yaml
+++ b/rapid_repos/defaults/main.yaml
@@ -2,4 +2,4 @@
 git_root: /var/local/rapid-repos
 config_root: /usr/local/etc/rapid-repos
 bin_root: /usr/local/bin
-rapidtools_github: beyond-all-reason/RapidTools
+rapidtools_deb: https://github.com/beyond-all-reason/RapidTools/releases/download/v0.2.2/rapidtools_0.2.2-0+debian13_amd64.deb
